Rename openshift-common role to openshift-defaults. Upgrade to openshift 1.5.0

--- a/playbook/ceph-clusters-secret.yml
+++ b/playbook/ceph-clusters-secret.yml
@@ -15,7 +15,7 @@
   become: true
   gather_facts: false
   roles:
-    - openshift-common
+    - openshift-defaults
   tags:
     - ceph-clusters-secret
   tasks:
